# agent_llm_smart_home

home_simulator/: .flaskenv  .gitignore  app.py  home_simulator.py  pyproject.toml  run.sh
home_simulator/webapp/: __init__.py  routes.py
home_simulator/webapp/static/css/: popup.css  style.css
home_simulator/webapp/static/js/: popup_logic.js  script.js
home_simulator/webapp/templates/: home.html
llm_supervisor/: agent.py  pyproject.toml  run.sh
llm_supervisor/static/: index.html  index_old2.html
llm_supervisor/web/: index.html
