[project]
name = "home-simulator"
version = "0.1.0"
description = "Smart home simulator"
authors = [
    {name = "Vlad Mocanu, vlad.mocanu.alexandru@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask (>=3.1.0,<4.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
