[project]
name = "llm-supervisor"
version = "0.1.0"
description = ""
authors = [
    {name = "Vlad Mocanu Alexandru",email = "vlad.mocanu.alexandru@gmail.com"}
]

requires-python = ">=3.12"
dependencies = [
    "fastapi (==0.115.0)",
    "uvicorn[standard] (==0.30.6)",
    "requests (==2.32.3)",
    "openai (==1.44.0)",
    "httpx (==0.27.2)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
